--- a/styles/Typewriter.css
+++ b/styles/Typewriter.css
@@ -1,5 +1,10 @@
-body {
+@import "./fonts/Typewriter/cmun-typewriter.css";
+
+* {
   font-family: "Computer Modern Typewriter";
+}
+
+body {
   background-color: rgb(0, 0, 0);
   color: rgb(255, 255, 255);
 }
